--- a/src/Modules/signin.module.css
+++ b/src/Modules/signin.module.css
@@ -3,6 +3,7 @@
     border-radius: 6px;
     width: 400px;
     padding: 10px;
+    font-weight: bold;
 }
 .input::placeholder {
     color: rgb(128, 128, 128);
@@ -14,8 +15,5 @@
     .input{
         width: 300px;
         padding: 8px;
-    }
-    .button{
-        width: 300px;
     }
 }
